# my_diary_app

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
diary/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_initial.py
diary/templates/diary/: base.html  diary_confirm_delete.html  diary_form.html  diary_item.html  diary_list.html
diary/templates/diary/includes/: inc_menu.html
my_diary/: apps.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py
users/templates/users/: login.html  user_form.html
